# dowe-lang

./: .gitignore  Cargo.toml
assets/fonts/: README.md
crates/agent/: Cargo.toml
crates/agent/src/: client.rs  context.rs  error.rs  images.rs  lib.rs  model.rs  prompts.rs  request.rs  skills.rs  tests.rs  tools.rs
crates/agent_harness/: Cargo.toml
crates/agent_harness/src/: error.rs  lib.rs  lib_tests.rs  model.rs  paths.rs  templates.rs  test_fixtures.rs  workflow.rs
crates/agent_harness/src/workflow/: commands.rs  diagnostics.rs  plan_checks.rs  plan_derivation.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  codegraph.rs  deploy.rs  dev.rs  init.rs  kv_cli.rs  main.rs  menus.rs  spawn_cli.rs  store_cli.rs  upgrade.rs  usage.rs
crates/cli/src/agent/: chat.rs  harness.rs
crates/codegraph/: Cargo.toml
crates/codegraph/src/: baseline.rs  build.rs  check.rs  duplicate.rs  error.rs  lib.rs  metrics.rs  mode.rs  model.rs  paths.rs  reports.rs  waivers.rs
crates/codegraph/tests/: codegraph.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: error.rs  language.rs  lib.rs  model.rs  parser.rs  pipeline.rs  typecheck_artifacts.rs
crates/compiler/src/language/: analysis.rs  completion.rs  formatting.rs  model.rs  navigation.rs  symbols.rs  tests.rs
crates/compiler/src/parser/: project.rs  source_ast.rs  source_config.rs  source_discovery.rs  source_i18n.rs  source_imports.rs  source_kv.rs  source_kv_tests.rs  source_parser.rs  source_server.rs  source_stdlib.rs  source_store.rs  source_types.rs  source_values.rs  source_views.rs  tests.rs
crates/compiler/src/pipeline/: compile_and_artifacts.rs  tests_config.rs  tests_examples.rs  tests_native_output.rs  tests_security.rs  tests_web_output.rs
crates/compiler/src/typecheck_artifacts/: source_language.rs
crates/components/: Cargo.toml
crates/components/src/: lib.rs
crates/components/src/component/: builders.rs  code_highlighting.rs  design_tokens.rs  error.rs  font_catalog.rs  font_collection.rs  i18n.rs  model.rs  navigation_parsing.rs  registry.rs  style_parsing.rs  style_tokens.rs  tests_props_and_tree.rs  tests_registry_and_validation.rs  tree_helpers.rs  tree_validation.rs  typography.rs  value_parsing.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: cloudflare.rs  error.rs  files.rs  lib.rs  model.rs  package.rs  publish.rs  tests.rs
crates/generator_android/: Cargo.toml
crates/generator_android/src/: lib.rs
crates/generator_android/src/android/: artifacts.rs  compose_rendering.rs  compose_styles.rs  compose_values_and_text.rs  design_tokens_and_names.rs  dev_java_runtime.rs  dev_layout_partitioning.rs  dev_reactive_lowering.rs  dev_rendering.rs  dev_shell.rs  escaping.rs  generated_views.rs  reactive_lowering.rs  reactive_runtime.rs  tests.rs
crates/generator_desktop/: Cargo.toml
crates/generator_desktop/src/: lib.rs
crates/generator_desktop/src/desktop/: artifacts.rs  tests.rs
crates/generator_ios/: Cargo.toml
crates/generator_ios/src/: lib.rs
crates/generator_ios/src/ios/: artifacts.rs  design_tokens_and_names.rs  generated_runtime.rs  layout_partitioning.rs  layout_sections.rs  reactive_lowering.rs  reactive_runtime.rs  swift_modifiers.rs  swift_rendering.rs  swift_values_and_text.rs  tests.rs
crates/generator_web/: Cargo.toml
crates/generator_web/src/: lib.rs
crates/generator_web/src/web/: artifacts.rs  css_rules.rs  html_classes_and_escape.rs  html_rendering.rs  routes_and_css_collection.rs  tests.rs
crates/id/: Cargo.toml
crates/id/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  tests.rs
crates/kv/: Cargo.toml
crates/kv/src/: auth.rs  codec.rs  engine.rs  error.rs  lib.rs  names.rs  remote.rs  tests.rs
crates/minifier/: Cargo.toml
crates/minifier/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: dev.rs  dev_events.rs  dev_targets.rs  dev_watch.rs  error.rs  handlers.rs  init.rs  init_templates.rs  init_tests.rs  lib.rs  logging.rs  production_handlers.rs  server.rs  server_actions.rs  server_tests.rs  watch.rs
crates/runtime/src/dev_targets/: android.rs  desktop.rs  ios.rs  ios_cache.rs
crates/runtime/src/handlers/: cors.rs  entrypoints.rs  http_actions.rs  middleware.rs  store_context_execute.rs  store_context_kv.rs  store_context_resolve.rs  store_context_store.rs  store_endpoints.rs  store_helpers.rs  store_types.rs  web_assets.rs  websocket.rs
crates/spawn/: Cargo.toml
crates/spawn/src/: capture.rs  config.rs  control.rs  error.rs  event.rs  lib.rs  lib_core.rs  lib_tests.rs  platform.rs  pty.rs  stdio.rs  validation.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: auth.rs  bench.rs  codec.rs  engine.rs  error.rs  lib.rs  metadata.rs  names.rs  query.rs  remote.rs  tests.rs  transaction.rs  value.rs
examples/: README.md
examples/clinic-desk/src/: config.dowe  main.dowe  views.dowe
examples/clinic-desk/src/handlers/: appointments.dowe
examples/clinic-desk/src/layouts/: workspace.dowe
examples/clinic-desk/src/pages/: appointments.dowe  dashboard.dowe
examples/commerce-ops/src/: config.dowe  main.dowe  views.dowe
examples/commerce-ops/src/handlers/: products.dowe
examples/commerce-ops/src/layouts/: ops.dowe
examples/commerce-ops/src/pages/: dashboard.dowe  inventory.dowe
examples/support-console/src/: config.dowe  main.dowe  views.dowe
examples/support-console/src/handlers/: tickets.dowe
examples/support-console/src/layouts/: console.dowe
examples/support-layers/src/: config.dowe  main.dowe  views.dowe
(+172 files in other folders)
