[workspace]
members = [
  "crates/agent",
  "crates/agent_harness",
  "crates/cli",
  "crates/codegraph",
  "crates/components",
  "crates/compiler",
  "crates/crypto",
  "crates/deploy",
  "crates/generator_android",
  "crates/generator_desktop",
  "crates/generator_ios",
  "crates/generator_web",
  "crates/id",
  "crates/ipc",
  "crates/kv",
  "crates/minifier",
  "crates/runtime",
  "crates/spawn",
  "crates/store",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8.7", features = ["ws"] }
bytes = "1.11.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
futures-util = "0.3.31"
hmac = "0.12.1"
libc = "0.2.186"
portable-pty = "0.9.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
