[package]
name = "dowe_crypto"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
hmac.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lib]
path = "src/lib.rs"
