[package]
name = "dowe_spawn"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
portable-pty.workspace = true
serde.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[lib]
path = "src/lib.rs"
